[gd_scene load_steps=3 format=2]

[ext_resource path="res://GeneralOptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://theme_test.tres" type="Theme" id=2]

[node name="GeneralOptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 123.0
margin_top = 85.0
margin_right = 388.0
margin_bottom = 215.0

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 265.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_top = 7.0
margin_right = 87.0
margin_bottom = 22.0
text = "Display Mode"

[node name="GeneralOptionsDisplayModeButton" type="OptionButton" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 91.0
margin_right = 265.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
text = "Fullscreen"
items = [ "Fullscreen", null, false, 0, null, "Window", null, false, 1, null, "Borderless Window", null, false, 2, null ]
selected = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 265.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 7.0
margin_right = 64.0
margin_bottom = 22.0
text = "language"

[node name="OptionButton" type="OptionButton" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 192.0
margin_bottom = 30.0
text = "deutsch"
items = [ "deutsch", null, false, 0, null, "english", null, false, 1, null ]
selected = 0

[node name="GeneralOptionsVsyncButton" type="CheckButton" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 265.0
margin_bottom = 92.0
pressed = true
text = "vsync"

[node name="GeneralOptionsMenuBackButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 265.0
margin_bottom = 130.0
text = "back"

[connection signal="item_selected" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer2/GeneralOptionsDisplayModeButton" to="." method="_on_GeneralOptionsDisplayModeButton_item_selected"]
[connection signal="item_selected" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="ColorRect/CenterContainer/VBoxContainer/GeneralOptionsVsyncButton" to="." method="_on_GeneralOptionsVsyncButton_toggled"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/GeneralOptionsMenuBackButton" to="." method="_on_GeneralOptionsMenuBackButton_pressed"]
